@@ -31,6 +31,7 @@ Version 1.1
 * New utility: mk6vmux: directly multiplexes VDIF data from a Mark6 module
 * vmux and mk6vmux (and in general any multiplexing) can be done on complex data
 * Support for partial frame validity in multiplexed VDIF data (pending VDIF committee approval of EDV version 4 requested by WFB on 2015/10/09)
+* Support for fanout in multiplexing (needed by some DBBC3 modes), both in library in vmux (very lightly tested)
 
 Version 1.0
 ~~~~~~~~~~~
